syntax = "proto3";

option csharp_namespace = "webapi";

import "google/protobuf/timestamp.proto";

package message;

service MessageService {
  rpc CreateMessage (CreateMessageRequest) returns (MessageResponse); 
  rpc GetAllMessages (GetAllMessagesRequest) returns (MessagesResponse);
  rpc GetAllMessagesStream(GetAllMessagesRequest) returns (stream MessagesResponse); 
}

message CreateMessageRequest {
  string description = 1;
}

message GetAllMessagesRequest { }

message MessageResponse {
  string id = 1;
  string description = 2;
}

message MessagesResponse {
  repeated MessageResponse items = 1;
  google.protobuf.Timestamp timestamp = 3;
}